Update index.css Name overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   body {
     @apply antialiased;
     overflow-x: hidden; /* Prevent horizontal scroll on the body */
+    margin-right: 0 !important;
   }
 }
 
